syntax = "proto3";

package cleanup.v1;

message FinalizeCleanupRequest {}

message FinalizeCleanupResponse {}

service CleanupService {
  rpc FinalizeCleanup(FinalizeCleanupRequest) returns (FinalizeCleanupResponse) {}
}
